# backend-agent

./: .env.example  .gitignore  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml
scripts/: run_eval.py  run_indexer.py
src/: main.py
src/agent/: core.py  graph.py  nodes.py  parsers.py  prompt.py  reflection.py  state.py  tools.py
src/api/v1/: agent.py  webhook.py
src/core/: config.py
src/evaluation/: dataset.py  metrics.py
src/indexer/: azure_devops.py  crawler_dotnet.py  crawler_python.py  embedder.py  index_builder.py
src/models/: index.py  query.py
src/retrieval/: file_fetcher.py  index_store.py  reranker.py  vector_store.py
src/static/: ui.html
tests/: conftest.py  test_agent_core.py  test_api.py  test_index_builder.py  test_tools.py  test_webhook.py
